# plusml

./: .clang-format  CMakeLists.txt  LICENSE  README.md
docs/: annotated.html  binary__logistic__regression_8h_source.html  binary__svm_8h_source.html  classes.html  classplusml_1_1_binary_logistic_regression-members.html  classplusml_1_1_binary_logistic_regression.html  classplusml_1_1_binary_s_v_m-members.html  classplusml_1_1_binary_s_v_m.html  classplusml_1_1_linear_regression-members.html  classplusml_1_1_linear_regression.html  classplusml_1_1_loss_gradient-members.html  classplusml_1_1_loss_gradient.html  classplusml_1_1_m_a_e_grad-members.html  classplusml_1_1_m_a_e_grad.html  classplusml_1_1_m_s_e_grad-members.html  classplusml_1_1_m_s_e_grad.html  classplusml_1_1_multiclass_logistic_regression-members.html  classplusml_1_1_multiclass_logistic_regression.html  classplusml_1_1_multiclass_s_v_m-members.html  classplusml_1_1_multiclass_s_v_m.html  dir_3f060cf75ae5580dac0c32dc87b0bce8.html  dir_42ee58b2b22917a08139dfd6a65ed6db.html  dir_4de04395b4eff18783406e80ab1cdabe.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6b717d1577e5707839167b146e25803b.html  dir_6d753975e0cb036cdb8523520294359e.html  dir_b4e130041098c10a735501e0b2cc86d4.html  dir_b5d6f146a983013b29e148ed2fd06546.html  dir_d3e1953e28a00729ca7c6a1e0a39a38d.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e0f2585876cf9f1514abd7fbcea6db76.html  dir_feeb48d121943de392dcd86c10712e43.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  gradient_8h_source.html  hierarchy.html  index.html  linear__regression_8h_source.html  (+6 more)
src/: binary_logistic_regression.cpp  binary_svm.cpp  linear_regression.cpp  multiclass_logistic_regression.cpp  multiclass_svm.cpp  util.cpp
test/: binary_logistic_regression_test.cpp  binary_svm_test.cpp  linear_regression_test.cpp  (+2 more)
(+35 files in other folders)
